@@ -1137,10 +1137,10 @@ That comes to '''$5''' average edits per page, and '''$6''' views per edit.",
 'doubleredirects'	=> 'Double redirects',
 'doubleredirectstext'	=> "Each row contains links to the first and second redirect, as well as the first line of the second redirect text, usually giving the \"real\" target page, which the first redirect should point to.",
 'doubleredirectsarrow'	=> '→',
-'brokenredirects'	=> 'Broken Redirects',
-'brokenredirectstext'	=> 'The following redirects link to a non-existing pages.',
-'selflinks'		=> 'Pages with Self Links',
-'selflinkstext'		    => 'The following pages contain a link to themselves, which they should not.',
+'brokenredirects'	=> 'Broken redirects',
+'brokenredirectstext'	=> 'The following redirects link to non-existent pages:',
+'selflinks'		=> 'Self-linking pages',
+'selflinkstext'		    => 'The following pages link to themselves:',
 'mispeelings'           => 'Pages with misspellings',
 'mispeelingstext'               => "The following pages contain a common misspelling, which are listed on $1. The correct spelling might be given (like this).",
 'mispeelingspage'       => 'List of common misspellings',
