@@ -393,6 +393,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 1996) Special page to list redirects
 * (bug 137) MediaWiki:Copyrightwarning hardcoding
 * (bug 714) "plainlinks" class issues in IE, Opera
+* (bug 4317) Inconsistent "broken redirects" messages
+* Default interface text for "selflinks" tweaked
 
 === Caveats ===
 
